# clean-review

./: .gitignore  README.md  architecture.md  run_local.sh
backend/: Dockerfile  build.gradle.kts  settings.gradle.kts
workers/review-analysis-worker/: Dockerfile  pyproject.toml
workers/review-analysis-worker/src/review_analysis_worker/: __init__.py  __main__.py  collection_pipeline.py  events.py  idempotency.py  postgres_retry.py  postgres_storage.py  retry.py  worker.py
workers/review-analysis-worker/src/review_analysis_worker/analyzers/: __init__.py  crewai.py  gemini.py
workers/review-analysis-worker/src/review_analysis_worker/collectors/: collected_review.py  errors.py  naver_playwright.py  page_extractor.py  playwright.py  review_source.py  search_discovery.py  web.py
workers/review-analysis-worker/src/review_analysis_worker/parsers/: __init__.py  naver.py
workers/review-analysis-worker/src/review_analysis_worker/runtime/: app.py  config.py  first_image_ocr.py  gemini.py  kafka.py  postgres.py
workers/review-analysis-worker/tests/: test_collection_pipeline.py  test_crewai_analyzer.py  test_event_envelope.py  test_first_image_ocr.py  test_gemini_adapter.py  test_idempotency.py  test_kafka_runtime.py  test_naver_parser.py  test_naver_playwright_collector.py  test_playwright_collector.py  test_postgres_retry.py  test_postgres_storage.py  test_retry_dlt.py  test_review_page_extractor.py  test_runtime_app.py  test_runtime_config.py  test_search_discovery.py  test_worker.py
workers/review-analysis-worker/tests/fixtures/: google_search.html  naver_blog.html
(+172 files in other folders)
