[project]
name = "review-analysis-worker"
version = "0.1.0"
description = "Kafka-only review analysis worker skeleton."
requires-python = ">=3.11,<3.12"
dependencies = [
    "confluent-kafka>=2.14.0",
    "crewai>=1.0.0",
    "google-genai>=1.75.0",
    "playwright>=1.57.0",
    "psycopg[binary]>=3.3.4",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
